# Sequence

./: ArraySequence.h  Bit.h  BitSequence.h  CMakeLists.txt  DynamicArray.h  IEnumerator.h  LinkedList.h  ListSequence.h  Option.h  README.md  Sequence.h  main.cpp  menu.h  menu.hpp  types.cpp  types.h
tests/: testArray.cpp  testBit.cpp  testList.cpp
